fix: use static token auth for Directus instead of email/password
- Switch from authentication() to staticToken() for better security
- Update env.example with clearer instructions for creating access tokens
- Add graceful fallback when Directus is not configured

--- a/env.example
+++ b/env.example
@@ -7,7 +7,10 @@
 NEXT_PUBLIC_DIRECTUS_URL=http://localhost:8055
 
 # Required: Directus Static Token
-# Get from: Directus Admin → Settings → Access Tokens
+# Create in Directus: Admin → Settings → Access Tokens → New
+# - Name: anything (e.g., "Production Frontend")
+# - Token: copy this value
+# - Expires: Leave blank (never expires)
 DIRECTUS_STATIC_TOKEN=your-static-token-here
 
 # Optional: Site URL (for SEO, sitemap, etc.)
